FinTech-Web-App/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      serviceAccountName: employee-sa  # IRSA for AWS access
      containers:
        - name: employee-service
          image: <your-ecr-repo>
          ports:
            - containerPort: 8080
