FinTech-Web-App/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  selector:
    app: employee-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
